# monaco-demo

./: .gitignore  README.md  app.js  build-and-start.bat  build.bat  index.html  jest.config.js  package.json  playwright-debug.js  playwright.config.ts  start-server.bat  style.css  test-mcp-editor.mjs  test_mcp.py  vite.config.js  webpack.config.js
.repo_wiki/: state.json
docs/: ai-chat-context-pitfalls.md  ai-chat-features-implementation.md  ai-chat-skill-mcp.md  ai-chat.md  ai-completion-debounce-cooldown.md  ai-completion-speculative-request.md  api-settings.md  chat-history.md  claude-mcp-test-guide.md  define-const-symbols.md  diff-viewer.md  editor-mcp-service.md  global-config.md  handoff-lsp-test-fix.md  lsp-pitfalls.md  mcp-architecture-analysis.md  mcp-editor-context.md  mcp-editor-handoff.md  mcp-feature.md  menu-implementation-plan.md  plan-ai-completion.md  python-lsp.md  summary-lsp-test-fix.md  summary-python-completion-lsp-issues.md  testing-guide.md
docs/bugfix/: ai-chat-code-block-pitfalls.md  (+5 more)
e2e/: chat-fold.spec.ts
example/: app-cpp.js  app.js  example.html  index.html  style.css
python-mcp/: README.md  pyproject.toml
python-mcp/src/editor_mcp_fastmcp/: __init__.py  client.py  server.py  tools.py
python-mcp/tests/: test_client.py  test_tools.py
server/: jest.config.js  package.json  tsconfig.json
src/: ai-completion-config.js  ai-completion.js  completions.js  index-v0.html  index.html  main.js  style.css
test/: jest-esbuild-transformer.cjs
ts-mcp/: README.md  package.json  tsconfig.json
wiki/: glossary.md  index.md  mkdocs.yml
(+206 files in other folders)
